[gd_scene load_steps=4 format=2]

[ext_resource path="res://source/ui/MatchInfo.gd" type="Script" id=1]
[ext_resource path="res://source/ui/TeamScore.tscn" type="PackedScene" id=2]
[ext_resource path="res://source/ui/TimerHUD.tscn" type="PackedScene" id=3]

[node name="MatchInfo" type="Control"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_top = 15.0
margin_bottom = 65.0
rect_min_size = Vector2( 0, 50 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Rect" ]

[node name="Container" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -800.0
margin_top = -25.0
margin_right = 800.0
margin_bottom = 25.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 0
alignment = 1
_sections_unfolded = [ "custom_constants" ]

[node name="RedScore" parent="Container" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 600.0
margin_right = 750.0
margin_bottom = 50.0
flipped = true

[node name="TimerHUD" parent="Container" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 750.0
margin_right = 850.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 50 )
time_left = 3

[node name="BlueScore" parent="Container" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 850.0
margin_right = 1000.0
margin_bottom = 50.0
team = "Blue"

